--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dropzone": "^11.4.2",
     "react-easy-crop": "^3.5.3",
     "react-hook-form": "^7.17.2",
-    "react-query": "^3.26.0"
+    "react-query": "^3.26.0",
+    "recoil": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
