--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^4.1.17",
     "lodash-es": "^4.17.21",
     "next": "11.1.2",
+    "notistack": "^2.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
