--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
     "axios": "^0.22.0",
+    "clipboard": "^2.0.8",
     "framer-motion": "^4.1.17",
     "lodash-es": "^4.17.21",
     "next": "11.1.2",
