--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clipboard": "^2.0.8",
     "framer-motion": "^4.1.17",
     "lodash-es": "^4.17.21",
+    "nanoid": "^3.1.30",
     "next": "11.1.2",
     "notistack": "^2.0.2",
     "react": "17.0.2",
