--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.0.3",
+    "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.3",
     "axios": "^0.22.0",
     "clipboard": "^2.0.8",
