--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-easy-crop": "^3.5.3",
     "react-hook-form": "^7.17.2",
     "react-query": "^3.26.0",
+    "react-use": "^17.3.1",
     "recoil": "^0.4.1"
   },
   "devDependencies": {
