--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "11.1.2",
     "notistack": "^2.0.2",
     "react": "17.0.2",
+    "react-device-detect": "^2.1.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
     "react-easy-crop": "^3.5.3",
