--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dropzone": "^11.4.2",
     "react-easy-crop": "^3.5.3",
     "react-hook-form": "^7.17.2",
+    "react-masonry-component": "^6.3.0",
     "react-query": "^3.26.0",
     "react-use": "^17.3.1",
     "recoil": "^0.4.1"
